--- a/daily/2025-06-22.md
+++ b/daily/2025-06-22.md
@@ -7,54 +7,46 @@
 **AI内容摘要**
 
 ```
-谷歌Gemini Code Assist升级，Meta发布智能眼镜。
-Kimi-Researcher深度研究，AI设计工具Motiff亮眼。
-开源Ring-lite模型突破，代码与排版工具受关注。
+Meta发布AI运动眼镜，谷歌升级Gemini Code Assist强化编程。月之暗面推出Kimi-Researcher深度研究Agent，AI视频与设计工具也更新。
+蚂蚁开源轻量级MoE模型Ring-lite性能卓越，Typst简化文档排版，gitingest助代码库生成摘要。
+宝玉分享Claude提示词获取法，Cursor Super Tab凸显AI工具重要性，展现AI技术广泛且深入的应用。
 ```
 
 
 
 **AI产品与功能更新**
-
-1.  Google的**Gemini Code Assist**插件真是程序员的好帮手！💻 它基于**Gemini大语言模型**，能帮你**实时生成代码**、**调试**、写**测试**、甚至**审查PR**，效率瞬间飙升。最新版更是升级到超强的**Gemini 2.5模型**，不仅能**个性化定制命令**和**项目规则**，还能理解整个项目高达**百万token**的上下文，简直是编程界的"读心术”！🤯 [更多详情](https://codeassist.google/)
-    <br/> ![Gemini Code Assist界面](https://assets-v2.circle.so/1r6v04tnsdsmsrresk4vg4ky37ka "img") <br/>
-    <br/> ![Gemini 2.5模型特性](https://assets-v2.circle.so/28yihula0w8t6fx4gbvukcibdgay "img") <br/>
-
-2.  哇哦！😮 Meta和Oakley联手搞了个大新闻——推出**Oakley Meta HSTN智能运动眼镜**！🕶️ 这眼镜可不一般，它集成了**AI助手**、**3K高清摄像**和Oakley独家的**PRIZM™镜片技术**，简直是运动员的梦想装备，能帮你分析和记录所有运动表现。而且它还**IPX4防水**，续航长达**8小时**，还能**语音控制**呢！🗣️ 7月11日预售，起售价才**399美元**，运动爱好者们快冲鸭！🏃‍♀️💨 [更多详情](https://www.meta.com/ai-glasses/oakley-meta-hstn/)
-    <br/> ![Oakley智能眼镜外观](https://assets-v2.circle.so/kh9r8ueqbloocw6gyqcxaij32nw5 "img") <br/>
-    <br/> ![运动眼镜细节展示](https://assets-v2.circle.so/cbth9m9igksjexm52zp68555ml98 "img") <br/>
-    <br/> ![眼镜运动场景应用](https://assets-v2.circle.so/284jjjzhzwpssrifjbe4qvov2z1h "img") <br/>
-    <br/> ![Oakley智能眼镜续航](https://assets-v2.circle.so/r0needq8cxji3bgenfp9aq8zq2m4 "img") <br/>
-
-3.  月之暗面旗下的Kimi智能助手又放大招了！🚀 他们推出了首个基于**端到端自主强化学习**的**Agent产品——Kimi-Researcher**，现在正悄悄进行**小范围灰度测试**呢。这个Agent简直是研究人员的福音，能提供**高效又深入的深度研究服务**，自己规划、筛选信息，还能生成上万字的可溯源报告！📝 更厉害的是，它在**AI高难度测试Humanity’s Last Exam**中表现超赞，把好几个知名AI模型都甩在后面了！😮
-    <br/> ![Kimi-Researcher界面](https://upload.chinaz.com/2025/0621/6388609584170299341644456.png "img") <br/>
-
-4.  博主小互看完 **Gemini 2.5 Flash-Lite** 演示后直呼"太震撼了”！😲 这个模型展示的**未来实时交互界面**潜力简直是革命性的！它能根据你上一屏的上下文，**立刻生成下一屏的UI代码和内容**。想象一下，以后我们的操作系统可能再也没有固定的界面，而是能完全根据我们的想法实时变化，这不就是科幻电影里的场景吗？🤯 未来的动态交互，指日可待！ [更多详情](https://x.com/imxiaohu/status/1936371465697599647)
+1.  Meta与运动品牌Oakley强强联手，🎉隆重推出了**Oakley Meta HSTN智能运动眼镜**！😎 这款眼镜将尖端**AI技术**融入运动设计，简直是为运动员量身定制的未来装备。它不仅有AI助手、**3K高清摄像**和音频播放功能，还能实时分析你的运动数据，给你带来前所未有的体验！🚀 而且它还具备**IPX4防水**等级和长达**8小时续航**的超强耐力。限量版将于**7月11日**开启预售，普通版随后在美国、加拿大、欧洲等地发售，售价分别为**499美元**和**399美元**。准备好迎接你的运动新搭档了吗？
+    <br/> ![智能运动眼镜](https://assets-v2.circle.so/r0needq8cxji3bgenfp9aq8zq2m4 "img") <br/> ['更多详情'](https://www.meta.com/ai-glasses/oakley-meta-hstn/)
+2.  Google旗下的**Gemini Code Assist**插件，是基于强大的**Gemini 2.5大模型**的AI编程好帮手。👨‍💻它能无缝集成到Visual Studio Code等IDE中，提供**代码生成、调试、测试**以及文档参考等一系列实时援助。此次更新后，它的**推理能力**变得更强劲，还支持**自定义命令、项目规则**，甚至能处理惊人的**100万tokens上下文管理**！这无疑将为程序员们带来更智能、更个性化的编码体验。✨
+    <br/> ![Gemini Code Assist插件](https://assets-v2.circle.so/28yihula0w8t6fx4gbvukcibdgay "img") <br/> ['更多详情'](https://codeassist.google/)
+3.  月之暗面旗下广受欢迎的**Kimi智能助手**，近日推出了其首个创新性的**Agent产品——Kimi-Researcher**！🤩这款智能助手基于**端到端自主强化学习**技术，旨在提供高效、深入的**深度研究服务**，目前正进行小范围灰度测试。它能自主规划、搜索并筛选出高质量信息，最终生成详实的报告，甚至在AI高难度测试"Humanity’s Last Exam”中表现卓越。想尝鲜体验？快访问**kimi.com**申请内测资格吧！🔍
+    <br/> ![Kimi-Researcher Agent](https://upload.chinaz.com/2025/0621/6388609584170299341644456.png "img") <br/>
+4.  "小互”最近展示了**Gemini 2.5 Flash-Lite**在未来**实时交互界面**上的惊人潜力！🤯 想象一下，你只需轻轻一点，它就能根据上下文瞬间**自动生成**下一屏幕的**UI代码**和**内容**。这简直预示着一个没有固定界面、能根据你的需求**实时调整**和**定制**的**智能交互操作系统**即将到来。未来的交互体验，想想都觉得酷毙了！
     <video src="https://video.twimg.com/amplify_video/1936369280326742016/vid/avc1/1920x1080/i8x3Fyl8VZDnGnSI.mp4" controls="controls" width="100%"></video>
-
-5.  阑夕ོ观察到，视频模型界的三大"网红”——**可灵**的"橘猫小剧场”、**即梦**的"像素打工人”和**Veo 3**的"切东西ASMR”，都已经各自创造出了短视频爆款模板！💥 这简直是内容创作的"金手指”，可见它们在内容生成领域的影响力有多大！🎬 [更多详情](https://m.okjike.com/originalPosts/6856755331a37b0fa13aafbc)
-
-6.  归藏(guizang.ai)大佬强推了一款超赞的**AI设计工具——Motiff**！🎨 它不仅仅能根据你给的参考风格，嗖嗖地生成高质量UI页面，更绝的是，它居然是首款原生支持并完美复刻苹果**液态玻璃效果**的产品！✨ 而且这效果还自然可调，简直是设计师的福音啊！👍 [更多详情](https://x.com/op7418/status/1936333064927690903)
-    <br/> ![Motiff设计工具界面](https://pbs.twimg.com/media/Gt88dujbwAAOB_L?format=jpg&name=orig "img") <br/>
+    ['更多详情'](https://x.com/imxiaohu/status/1936371465697599647)
+5.  阑夕观察到，当前AI视频领域的三大巨头——**可灵**、**即梦**和**Veo 3**，已经成功在内容创作端引爆了各自的短视频爆款模板。🔥这充分展现了它们在**AI视频生成**领域的强大影响力和塑造力，简直是创作达人们的福音！
+    ['更多详情'](https://m.okjike.com/originalPosts/6856755331a37b0fa13aafbc)
+6.  归藏(guizang.ai)分享了一款能根据参考风格生成高质量、功能各异UI设计页面的**AI工具**，简直是设计师的神器！🎨 特别值得一提的是，他们还隆重介绍了**AI设计工具Motiff**，这可是首个原生支持**苹果液态玻璃效果**的产品。它的折射效果不仅自然逼真，还能随意调节，让你的设计作品瞬间提升几个档次！✨
+    ['更多详情'](https://x.com/op7418/status/1936333064927690903)
+    <br/> ![AI设计的UI页面](https://pbs.twimg.com/media/Gt88dujbwAAOB_L?format=jpg&name=orig "img") <br/>
     <video src="https://video.twimg.com/amplify_video/1936082509021765632/vid/avc1/1900x1080/ywGcNj7vRnEe3Hdl.mp4?tag=21" controls="controls" width="100%"></video>
 
 **开源TOP项目**
-
-1.  蚂蚁技术团队真是太酷了！😎 他们**开源**了一个超轻量级的**MoE推理模型——Ring-lite**。别看它总参数**16.8B**，实际激活参数才**2.75B**，通过独创的**C3PO强化学习**，竟然在各种推理榜单上都拿到了**SOTA效果**！😱 特别是在数学、代码和科学这些"烧脑”任务上表现惊人，甚至在高考数学全国一卷中都能考到约**130分**！🏆 项目还把模型权重、训练代码和数据集全公开了，透明度满分！💯 [项目地址](https://github.com/inclusionAI/Ring)
-    <br/> ![Ring-lite模型架构](https://upload.chinaz.com/2025/0621/6388611977273486846833445.png "img") <br/>
-
-2.  又一个明星**开源项目**来啦！✨ **typst**坐拥**42306颗星**，它是一个强大又好学的**标记式排版系统**，能让你的文档排版变得超级简单！告别复杂的格式调整，拥抱优雅的排版体验吧！📄 [项目地址](https://github.com/typst/typst)。
-
-3.  程序员们看过来！👀 **gitingest**这个**开源工具**简直是"代码阅读神器”！拥有**9564颗星**的它，只需把GitHub链接里的"hub”改成"ingest”，就能帮你把**代码库**变成**提示友好型摘要**！🤯 再也不用苦读代码，理解内容变得前所未有的轻松！🚀 [项目地址](https://github.com/cyclotruc/gitingest)。
-
-4.  想要优雅地阅读新闻吗？📰 **newsnow**这个拥有**11354颗星**的**开源项目**就能帮你实现！它致力于提供**实时热门新闻**的流畅阅读体验，让获取信息变得又高效又便捷。快来看看吧！🚀 [项目地址](https://github.com/ourongxing/newsnow)
+1.  蚂蚁技术团队这次可算是放了个大招！🚀 他们**开源**了轻量级的**MoE推理模型Ring-lite**。这个模型虽然总参数有16.8B，但激活参数竟然只有2.75B，真是既轻巧又强大！它凭借独创的**C3PO强化学习训练方法**，在多项推理榜单上都取得了SOTA（State-Of-The-Art）效果，尤其在数学和编程竞赛中表现更是惊艳。Ring-lite首次实现了全链路透明化，慷慨地提供了模型权重、训练代码和数据集，为全球相关研究提供了宝贵的资源。👍
+    <br/> ![蚂蚁Ring-lite模型](https://upload.chinaz.com/2025/0621/6388611977273486846833445.png "img") <br/> ['项目地址'](https://github.com/inclusionAI/Ring)
+2.  **Typst**真是一个闪耀的明星项目！✨ 它是一个星标数高达**42306**的强大且易于学习的**基于标记的排版系统**。它的诞生旨在彻底简化并优化文档排版过程，为用户带来前所未有的高效排版体验。再也不用为排版烦恼啦！
+    ['项目地址'](https://github.com/typst/typst)
+3.  **gitingest**（星标数**9564**）简直是开发者们的福音！🎉 这款巧妙的工具，只需你在GitHub URL中将"hub”替换为"ingest”，它就能自动为**代码库**生成**提示友好型摘要**。这大大简化了理解代码内容的过程，再也不用大海捞针般地翻阅代码了！
+    ['项目地址'](https://github.com/cyclotruc/gitingest)
+4.  项目**newsnow**（已获得**11354**颗星）致力于为用户提供一种**优雅地阅读实时热门新闻**的体验。📖它的目标就是让大家能更便捷、更美观地获取最新动态，追新闻也能追得有品味！
+    ['项目地址'](https://github.com/ourongxing/newsnow)
 
 **社媒分享**
-
-1.  技术小白和高手们注意啦！📢 博主宝玉分享了两个超实用的方法，教你如何**获取Claude Code的系统提示词**！💡 你可以用**claude-trace**工具，或者直接"扒拉”源代码，找到那些隐藏的提示词。这简直是技术爱好者们的福利呀！🥳 [更多详情](https://x.com/dotey/status/1936422285084123434)
-
-2.  nazha吐槽说，他们公司的**Cursor** IDE竟然退回免费计划了！😫 这下编码体验直接"倒退”到"刀耕火种”时代了。同事们都哭诉**Super Tab**功能简直是他们的"命根子”，没了它工作效率大打折扣啊！💔 可见这个功能有多么重要！ [更多详情](https://x.com/xiaokedada/status/1936255604940849576)
-    <br/> ![Cursor IDE截图](https://pbs.twimg.com/media/Gt7043yWwAALyHJ?format=jpg&name=orig "img") <br/>
+1.  **宝玉**大佬分享了获取**Claude Code****系统提示词**的两种"独门秘籍”：一是借助**claude-trace**工具，二是直接钻研那些未混淆的源代码。👨‍💻 这次分享简直是为开发者们点亮了一盏明灯，帮助大家深入了解如何提取**AI模型**的**内部提示词**，更好地与AI模型"对话”。💡
+    ['更多详情'](https://x.com/dotey/status/1936422285084123434)
+2.  nazha在社媒上吐槽说，由于公司把**Cursor**退回到Free Plan，导致编码体验瞬间"降级”到了"刀耕火种”时代。😩 同事们都一致认为，**Cursor**的**Super Tab**功能简直是不可或缺的生命线！看来，一旦用上了高级工具，就再也回不去了。😭
+    ['更多详情'](https://x.com/xiaokedada/status/1936255604940849576)
+    <br/> ![Cursor编码界面](https://pbs.twimg.com/media/Gt7043yWwAALyHJ?format=jpg&name=orig "img") <br/>
 
 ---
 
