--- a/daily/2025-06-23.md
+++ b/daily/2025-06-23.md
@@ -7,53 +7,53 @@
 **AI内容摘要**
 
 ```
-罗永浩将发布AI效率工具集。作弊工具Cluely被逆向解析，发现主要调用GPT-4.1和Claude。
-AI时代剪藏内容目的转为投喂个人喜好。AI应用加速企业转型，字节跳动开源Dolphin OCR模型。
-Jaaz提供本地AI图像设计与隐私保护。Suna是通用型AI代理。Claude代码因全局观与任务编排而流畅。
+罗永浩公司将推出AI效率工具集。归藏AI制作动物视频走红。
+Claude代码生成获赞，Cluely被揭依赖GPT4.1。
+企业向AI Native转型势在必行，字节跳动开源Dolphin OCR模型。
 ```
 
 
 
 **AI产品与功能更新**
 
-1.  罗永浩透露，其公司正研发的**AI新产品**将于两三个月后发布，它属于**效率工具集**，旨在解决美国AI邮件工具体验不佳和国内缺乏相关团队的痛点。老罗表示这次会格外谨慎，避免过早预热的旧账重演，力求稳妥发布！✨
+1.  罗永浩最近**透露**了一个小秘密🤫：他家公司正在研发的**全新AI产品**，预计再等两三个月就能和大家见面啦！这可不是一个简单的AI邮件工具，而是一个超级实用的**效率工具集**。老罗还吐槽说，他们试用了不少美国AI邮件工具，效果都不咋地，而且国内在这个领域的研发团队也相对稀缺。至于新产品的具体细节？他可是**守口如瓶**，吊足了大家的胃口呢！
+
+2.  📢 太酷啦！**歸藏的AI工具箱**最近可是玩出了新花样，他们利用**Veo3**工具，创作出了一系列火爆全网的**动物运动员AI视频**🤯！想象一下袋鼠打篮球🏀、猫咪击剑🤺的场景，是不是瞬间被萌翻了？更棒的是，他们还大方地分享了详细的**提示词模板**，让大家也能轻松上手，体验AI视频生成的无限创意！想知道怎么做的？点击['更多详情'](https://weibo.com/6182606334/PxIdZpN9s)去看看吧！
+    <br/> [![动物运动员AI视频示例](https://h5.sinaimg.cn/upload/2015/09/25/3/timeline_card_small_video_default.png "img")](https://h5.sinaimg.cn/upload/2015/09/25/3/timeline_card_small_video_default.png) <br/>
+
+3.  **wwwgoubuli**对**Claude**可是赞不绝口，直呼它在**代码生成**方面表现得简直是"丝滑”无比✨！他认为，Claude之所以如此出色，关键在于其卓越的"**全局观**”和"**任务编排**”能力。这就像给大型语言模型（**LLM**）装上了"智能导航”，大大减少了它们在生成过程中"横冲直撞”的尴尬局面。这种对上下文的深度把握，真是👍证明了它在提升AI模型输出质量上的巨大作用！想要了解更多？['更多详情'](https://x.com/wwwgoubuli/status/1936501764410445947)。
 
 **AI前沿研究**
 
-1.  😮 博主nazha爆料！有人竟然成功**逆向解析**了之前火爆的**作弊工具Cluely**的系统提示词！🔍 结果发现，尽管它被指示"永不提及具体LLM提供商”，但实际上主要调用的是**GPT-4.1**，同时也支持**Claude Sonnet 3.7**。这波操作真是秀啊！🤯 完整提示词的秘密，尽在['更多详情'](https://x.com/xiaokedada/status/1936625579752902991)！
-<br/> [![图片](作弊工具Cluely提示词 "img")](https://pbs.twimg.com/media/Gt_UfmKW8AAlu-T?format=jpg&name=orig) <br/>
+1.  😮 **nazha**带来了一个大爆料！Jack Cable这位技术侦探🕵️‍♂️竟然成功**逆向**了之前风靡一时的作弊工具 **Cluely** 的**系统提示词**！更令人惊讶的是，他揭示了Cluely幕后真正的大佬竟然是 **GPT 4.1** 和 **Claude Sonnet 3.7**！虽然Cluely煞费苦心地想隐藏它所依赖的LLM提供商，但这一发现💡无疑是戳破了它的"马甲”，彻底暴露了其背后的真实技术栈。想知道更多八卦？['更多详情'](https://x.com/xiaokedada/status/1936625579752902991)。
+    <br/> [![Cluely提示词逆向发现](https://pbs.twimg.com/media/Gt_UfmKW8AAlu-T?format=jpg&name=orig "img")](https://pbs.twimg.com/media/Gt_UfmKW8AAlu-T?format=jpg&name=orig) <br/>
 
 **AI行业展望与社会影响**
 
-1.  玉伯在社媒上提出一个有趣的观点：🤔 在**AI时代**，我们"剪藏”内容不再是为了"稍后阅读”，而是为了更精准地向AI系统"投喂”我们的**个人喜好**！这彻底改变了内容与AI互动的底层逻辑，细思极恐又充满无限可能啊！💡 更多洞察请戳['更多详情'](https://m.okjike.com/originalPosts/6857deccb7f4ddcfdf15a80c)。
-
-2.  🤔 orange.ai进行了一番深刻探讨：一边是大型企业员工悄悄利用AI提升**工作效率**却选择隐瞒，另一边是20人的AI创业公司凭借AI实现了千万美元的**ARR**！💸 这鲜明对比背后，是公司转型为**AI Native 公司**的必然趋势！未来几年，拥抱AI与否，可能就是天壤之别啊！🤯 更多精彩分析请戳['更多详情'](https://x.com/oran_ge/status/1936606314354163954)。
+1.  **Orange.ai**郑重指出，公司向**AI Native**（AI原生）转型简直是势在必行🚀！为啥呢？因为它能让员工效率飙升📈，让传统企业在组织适应上遭遇不小的挑战🤔。反观那些小巧精悍的**AI创业公司**，却能用更少的人手创造出更高的营收！这种鲜明对比，无疑预示着未来几年，**AI Native**的组织将会在市场竞争中展现出更强大的生命力！想了解更多关于未来企业的思考？['更多详情'](https://x.com/oran_ge/status/1936606314354163954)。
 
 **开源TOP项目**
 
-1.  **Jaaz**项目作为**Lovart.AI**的**本地开源替代**方案，创新地结合了**AI模型和图像模型**，实现了**智能图像设计生成**。🥳 它彻底摆脱了对云服务的依赖，让用户能够**本地运行AI模型**，从而更好地**保护隐私**并大幅提升效率。Jaaz不仅提供强大的图像编辑和无限创意画布，未来还计划支持视频生成功能，创意无限！🎨 详情请查阅['项目地址'](https://github.com/11cafe/jaaz)。
-<br/> [![图片](软件界面草图 "img")](https://assets-v2.circle.so/rw6naq4bhuu2rcnbnkl6c27hv7i5) <br/>
-<br/> [![图片](创意绘图功能 "img")](https://assets-v2.circle.so/ncwmtzspazknxzlec9xepqs9jtn6) <br/>
-<br/> [![图片](图像生成效果 "img")](https://assets-v2.circle.so/nuidbpiht67kucfn978hkojdxuey) <br/>
-<br/> [![图片](设计生成界面 "img")](https://assets-v2.circle.so/91uye2ev8p5xng790ubrwacr3ew0) <br/>
-<br/> [![图片](丰富的图像编辑 "img")](https://assets-v2.circle.so/e2mnh4c0p8e0itabj9w4q8eh67gg) <br/>
+1.  **Jaaz**来了，它简直就是**Lovart.AI的本地免费替代品**！🤩 这款神奇的工具，巧妙地结合了**AI模型**和**图像模型**的力量，让你可以在**本地**自由地设计、编辑和生成各种创意内容，比如精美的图像、吸睛的海报，甚至是完整的故事板！无限画布加上强大的图像编辑功能，创作效率瞬间飙升🎨！它还贴心地解决了大家对云服务依赖和隐私保护的担忧🛡️。更多宝藏细节，快去['项目地址'](https://github.com/11cafe/jaaz)一探究竟吧！
+    <br/> [![Jaaz创意内容设计界面](https://assets-v2.circle.so/rw6naq4bhuu2rcnbnkl6c27hv7i5 "img")](https://assets-v2.circle.so/rw6naq4bhuu2rcnbnkl6c27hv7i5) <br/>
+    <br/> [![Jaaz图像编辑功能展示](https://assets-v2.circle.so/ncwmtzspazknxzlec9xepqs9jtn6 "img")](https://assets-v2.circle.so/ncwmtzspazknxzlec9xepqs9jtn6) <br/>
+    <br/> [![Jaaz无限画布体验](https://assets-v2.circle.so/nuidbpiht67kucfn978hkojdxuey "img")](https://assets-v2.circle.so/nuidbpiht67kucfn978hkojdxuey) <br/>
+    <br/> [![Jaaz AI生成图像示例](https://assets-v2.circle.so/91uye2ev8p5xng790ubrwacr3ew0 "img")](https://assets-v2.circle.so/91uye2ev8p5xng790ubrwacr3ew0) <br/>
+    <br/> [![Jaaz本地创作流程](https://assets-v2.circle.so/e2mnh4c0p8e0itabj9w4q8eh67gg "img")](https://assets-v2.circle.so/e2mnh4c0p8e0itabj9w4q8eh67gg) <br/>
 
-2.  **manim**是一个由社区维护的、超酷的**Python框架**，专门用来制作**数学动画**！📐 目前它已经获得了令人惊叹的32656颗星，简直是数学爱好者的福音！✨ 想要学习或创作数学动画的朋友们，快来这里瞧瞧吧：['项目地址'](https://github.com/ManimCommunity/manim)。
+2.  哇哦，看看这个宝藏项目——**Manim**！它是一个由热心社区维护的**Python框架**，专门用来**创建数学动画**🌟！想象一下，复杂的数学概念瞬间变得**生动直观**起来，简直是教育和演示的神器🤓。目前它已经在GitHub上斩获了惊人的**32656颗星**，人气爆棚！想让数学"动”起来？赶紧去['项目地址'](https://github.com/ManimCommunity/manim)了解更多吧！
 
-3.  想要在Bilibili会员购平台**抢票**？🎟️ 别急，有了`biliTickerBuy`这个辅助工具，抢票成功率瞬间UP！目前它已经获得了2078个星标，可见其受欢迎程度！👏 抢票秘籍就在['项目地址'](https://github.com/mikumifa/biliTickerBuy)！
+3.  对于B站忠实粉丝来说，这款拥有2078个星标的**biliTickerBuy**简直是福音！🎉 它是一款超实用的**B站会员购购票辅助工具**🎫，专门设计来帮你简化在Bilibili平台购买票务的繁琐流程，轻松抢到心仪的门票！想体验丝滑购票？['项目地址'](https://github.com/mikumifa/biliTickerBuy)在这里！✨
 
-4.  `suna`是一款备受瞩目的**开源通用型AI代理**项目，它致力于提供强大的**多功能AI代理**能力，简直是AI开发者的瑞士军刀！🛠️ 目前该项目已累计斩获15194个星标，实力不容小觑！🚀 更多详情请访问['项目地址'](https://github.com/kortix-ai/suna)。
+4.  隆重介绍拥有15194个星标的**suna**！⭐ 这是一个**开源通用型AI代理**🤖，它就像你的个人AI助理，能为你提供各种强大的AI辅助功能，让你的工作和生活更加高效🚀。快去['项目地址'](https://github.com/kortix-ai/suna)探索它的奥秘吧！
 
-5.  👏 博主nazha带来重磅消息！**字节跳动**慷慨开源了他们的**Dolphin OCR模型**！这个模型在文字识别方面表现惊艳，特别是完美解决了"不该换行”这个老大难问题！👍 它拥有**322M**的参数量，并且通过并行策略实现了**高速识别**，效率杠杠的！🚀 想一睹真容？快戳['更多详情'](https://x.com/xiaokedada/status/1936620029929521317)查看项目地址和视频演示吧！
-<br/> [![图片](Dolphin OCR模型介绍 "img")](https://pbs.twimg.com/media/GuBBa2UXMAA173j?format=jpg&name=orig) <br/>
-<video src="https://video.twimg.com/tweet_video/GuBBlmwWIAASBFD.mp4" controls="controls" width="100%"></video>
+5.  **nazha**又带来了好消息！🥳 字节跳动竟然**开源**了他们的重量级**OCR 模型"Dolphin”**🐬！这款模型拥有惊人的**3.22亿参数**，并且巧妙地采用了**并行策略**，这意味着它能实现超快速⚡️且高质量的**文本识别**，尤其是在处理那些恼人的**不当换行问题**上，表现得简直是👌。经过实测，它的效果真的非常出色！想亲自体验一下吗？点击['更多详情'](https://x.com/xiaokedada/status/1936620029929521317)或直接去['项目地址'](https://github.com/bytedance/Dolphin?tab=readme-ov-file)围观吧！
+    <br/> [![字节跳动OCR模型Dolphin](https://pbs.twimg.com/media/GuBBa2UXMAA173j?format=jpg&name=orig "img")](https://pbs.twimg.com/media/GuBBa2UXMAA173j?format=jpg&name=orig) <br/>
+    <video src="https://video.twimg.com/tweet_video/GuBBlmwWIAASBFD.mp4" controls="controls" width="100%"></video>
 
 **社媒分享**
 
-1.  😮 "歸藏的AI工具箱”真是创意无限！他们分享了如何用**Veo3**生成超有趣的"**动物运动员**”AI视频的详细提示词模板！想象一下，袋鼠在打篮球，猫咪在击剑……🏀🤺 这股新趋势简直让AI视频创作变得活泼又充满趣味！🤣 赶紧访问['更多详情'](https://weibo.com/6182606334/PxIdZpN9s)去看看原帖吧（虽然视频暂时看不了）。
-<br/> [![图片](Veo3动物运动员视频 "img")](https://h5.sinaimg.cn/upload/2015/09/25/3/timeline_card_small_video_default.png) <br/>
-
-2.  🎉 wwwgoubuli对**Claude code**的体验赞不绝口，直呼"丝滑”！✨ 他指出，Claude在"**全局观**”和"**任务编排**”方面下足了功夫，这让**LLM**在处理复杂任务时不再"横冲直撞”，而是更加连贯、高效！简直是AI界的指挥家！🎶 了解更多丝滑体验，请点击['更多详情'](https://x.com/wwwgoubuli/status/1936501764410445947)。
+1.  玉伯在社交媒体上抛出了一个发人深省的观点🤔：他认为，在**AI时代**，我们常做的**剪藏**行为，其真正的意义已经悄然发生了转变！它不再仅仅是传统意义上的"稍后观看”，而更像是一种**信号传递**💡，在无形中"**告诉AI我喜欢**”💖！这真是个独特的视角，让人对AI时代的数字行为有了更深层次的理解。想看看玉伯是如何思考的吗？['更多详情'](https://m.okjike.com/originalPosts/6857deccb7f4ddcfdf15a80c)。
 
 ---
 
