--- a/podcast/2025-06-23.md
+++ b/podcast/2025-06-23.md
@@ -2,48 +2,54 @@
 
 ## Full: Podcast Formatting 
 
-我们真的需要“AI效率神器”吗？AI能看透我们的“小心思”吗？AI时代，企业如何才能不被淘汰？
+AI工具的“马甲”被扒，我们该相信谁？
+企业全面“AI Native”化，我们这些人类“原住民”怎么办？
+你随手一点的“喜欢”，AI到底学到了什么？
 
-嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。今天咱们聊点啥呢？当然还是AI，不过这次的话题啊，那叫一个五花八门，从“神秘新品”到“动物运动会”，再到“企业转型那些事儿”，保证让你听完之后，对未来的数字生活，又多了一份期待，嗯……也多了一点点，嗯，警觉。
+嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。今天咱们聊聊最近AI圈里那些有意思的事儿，保证让你听完心里痒痒，又有点儿痒痒的……那种感觉。
 
-好了，话不多说，咱们直入主题。首先要聊的，就是“自带BGM”的男人——罗永浩！他最近啊，悄悄透露了一个小秘密，说自家公司正在憋一个AI大招，预计再过两三个月就能跟大家见面了。听好了，这可不是一个简单的AI邮件工具，而是一个超级实用的“效率工具集”。老罗还在线吐槽说，他们试用了不少美国的AI邮件工具，结果都“不咋地”，而且国内在这个领域的研发团队也相对稀缺。至于具体细节？他可是守口如瓶，吊足了大家的胃口。听着是不是有点像他以前做手机那味儿了？总之，咱们就拭目以待，看他能变出什么“魔法”来。
+话说回来，罗永浩老师最近又“不安分”了，这不，他家公司正在憋一个大招，说是两三个月后就能面世一套全新的AI效率工具集。老罗还特意吐槽了一下，说他们试了不少美国的AI邮件工具，效果都不怎么样，而且国内这块的研发团队也挺稀缺的。听这口气，他是要来给大家“解套”了？嗯，具体是啥，他可“守口如瓶”呢，吊足了大家的胃口。
 
-说到魔法，你想象过袋鼠打篮球、猫咪击剑的场景吗？最近啊，归藏的AI工具箱就玩出了新花样，他们利用一个叫Veo3的工具，创作出了一系列火爆全网的“动物运动员AI视频”！画面那叫一个萌，一个酷，让人看了直呼“太会玩了”。更棒的是，人家还大方地分享了详细的提示词模板，意思就是，想看你家狗子表演跳水？嘿嘿，自己动手丰衣足食！这AI视频生成啊，真是越来越有意思了。
+这边老罗在吊胃口，那边“歸藏AI工具箱”可是玩出了新花样。他们用一个叫Veo3的工具，愣是搞出了一系列火爆全网的动物运动员AI视频！想想看，袋鼠在打篮球，猫咪在击剑……是不是瞬间被萌翻了？而且啊，他们还大方地分享了详细的提示词模板，这下好了，咱们也能轻松上手，让家里的宠物“C位出道”了，是不是挺有意思的？
 
-诶，话说回来，AI这东西，有时候是真聪明，有时候又有点“小秘密”藏不住。比如，最近就有人对Claude大加赞赏，说它在代码生成方面表现得简直是“丝滑”无比。认为Claude之所以出色，关键在于它有卓越的“全局观”和“任务编排”能力，这就像给大型语言模型装上了“智能导航”，大大减少了它们在生成过程中“横冲直撞”的尴尬局面。这种对上下文的深度把握，真是让人点赞。
+说到工具，有个叫wwwgoubuli的朋友，对Claude的代码生成能力那是赞不绝口，直呼“丝滑”无比。他说Claude厉害就厉害在它那“全局观”和“任务编排”能力，简直就像给大型语言模型装上了“智能导航”，让它不至于在生成过程中“横冲直撞”。这听起来，就像有个超靠谱的同事在旁边帮你理清思路，效率瞬间飙升啊。
 
-可另一边呢，作弊工具Cluely的“马甲”却被技术侦探Jack Cable给扒了！原来它煞费苦心想隐藏的幕后大佬，竟然是GPT 4.1和Claude Sonnet 3.7！哎呀，你说这AI想藏着掖着，也挺难的，毕竟高手在民间嘛，一眼就被看穿了“真实技术栈”。
+但AI圈也不是全是“丝滑”，偶尔也得来点“扒皮”大戏。这不，技术侦探Jack Cable就成功“逆向”了之前风靡一时的作弊工具Cluely的系统提示词。结果大吃一惊，Cluely幕后真正的大佬，竟然是GPT 4.1和Claude Sonnet 3.7！哎呀，这不就是披着马甲出来混，结果被一眼识破了嘛。这事儿告诉我们，AI再聪明，也架不住侦探眼尖啊！
 
-当然了，作为职场人，咱们最关心的还是AI对工作的影响。有专家就郑重指出，公司向“AI Native”，也就是AI原生转型，简直是“势在必行”啊！为啥呢？因为它能让员工效率“飙升”，让传统企业在组织适应上遭遇不小的挑战。你想想看，那些小巧精悍的AI创业公司，用更少的人手却能创造出更高的营收，你说这传统企业能不急吗？这种鲜明对比，无疑预示着未来几年，AI原生的组织将会在市场竞争中展现出更强大的生命力。所以啊，咱们打工人也得琢磨琢磨，怎么才能不掉队，是吧？
+再说回咱们打工人最关心的事儿。Orange.ai就郑重指出，公司向“AI Native”转型，简直是势在必行。你想啊，AI创业公司，用更少的人手就能创造更高的营收，效率杠杠的。这不就给传统企业出了道难题嘛？但话说回来，这既是挑战，也是机遇。未来几年，谁能更好地拥抱AI，谁就能在市场里站稳脚跟，甚至跑得更快。
 
-不过，也别焦虑，因为也有很多“宝藏”开源项目等着我们挖掘呢！比如Jaaz，它简直就是Lovart.AI的本地免费替代品，结合了AI模型和图像模型的力量，让你可以在本地自由地设计、编辑和生成各种创意内容，什么图像、海报、故事板，通通不在话下。而且，还贴心地解决了大家对云服务依赖和隐私保护的担忧。还有Manim，一个由热心社区维护的Python框架，专门用来创建数学动画，能把复杂的数学概念变得生动直观，简直是教育和演示的神器。
+当然，咱们也少不了开源社区的宝藏。比如说，Jaaz，它就像是Lovart.AI的本地免费替代品，让你在自己电脑上就能搞设计、搞生成，再也不用担心云服务和隐私问题了。还有Manim，一个Python框架，专门用来创建数学动画，那些枯燥的数学概念瞬间变得生动直观，简直是学渣福音，学霸也爱！以及字节跳动开源的Dolphin OCR模型，3.22亿参数，超快速高质量文本识别，据说处理那些恼人的不当换行问题，效果那叫一个“丝滑”。
 
-更接地气一点的，B站忠实粉丝的福音来了！biliTickerBuy，一款超实用的B站会员购购票辅助工具，帮你轻松抢到心仪的门票！嗯，这听起来是不是很“刚需”？另外，还有一个通用型AI代理suna，就像你的个人AI助理，能为你提供各种强大的AI辅助功能，让你的工作和生活更加高效。
+最后啊，玉伯老师在社交媒体上抛出了一个挺有意思的观点。他说在AI时代，我们平时那些“剪藏”行为，可不光是为了“稍后观看”了，它更像是一种“信号传递”，在无形中“告诉AI我喜欢”！想想看，你随手收藏的每一条信息，每一个视频，可能都在默默地训练着AI，让它更懂你。这听起来，是不是有点儿细思极恐，又有点儿……奇妙？
 
-对了，字节跳动还开源了他们重量级OCR模型“Dolphin”！这款模型拥有惊人的3.22亿参数，并且巧妙地采用了并行策略，这意味着它能实现超快速且高质量的文本识别，尤其是在处理那些恼人的不当换行问题上，表现得简直是👌。经过实测，它的效果真的非常出色！
-
-最后，再来一个发人深省的思考。玉伯老师在社交媒体上抛出了一个观点：他认为，在AI时代，我们常做的“剪藏”行为，其真正的意义已经悄然发生了转变！它不再仅仅是传统意义上的“稍后观看”，而更像是一种“信号传递”，在无形中“告诉AI我喜欢”！这真是个独特的视角，让人对AI时代的数字行为有了更深层次的理解。想想看，你每次点赞、收藏，是不是都在无形中训练着AI，让它更懂你呢？这挺有意思的，对吧？
-
-今天的情报就到这里，注意隐蔽，赶紧撤离。
+好啦，今天的情报就到这里，注意隐蔽，赶紧撤离！
 
 本期关键词:
-#罗永浩 #AI效率工具 #动物视频 #Claude #代码生成 #Cluely #GPT4.1 #AI Native #企业转型 #字节跳动 #Dolphin OCR #开源 #本地工具 #数学动画 #AI代理 #剪藏 #数字行为
+#AI #罗永浩 #效率工具 #动物视频 #Claude #代码生成 #Cluely #GPT4.1 #AI Native #字节跳动 #DolphinOCR #开源 #本地替代 #数学动画 #AI代理 #剪藏 #数字行为
 
 ## Short: Podcast Formatting 
 
-AI工具集真能解决所有效率问题吗？AI Native转型后，传统企业还能生存吗？我们给AI的点赞，是不是在无形中“驯化”它？嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
+AI工具真的能让我们的工作效率“丝滑”提升吗？AI生成的创意内容，比如“动物运动员”，是短暂的热闹，还是未来的新常态？还有，当我们在社交媒体上剪藏信息时，我们是在收藏，还是在“喂养”AI对我们的喜好？嘿，亲爱的V，欢迎收听新一期的来生情报站，我是你们的老朋友，何夕2077。
 
-罗永浩最近透露，他们公司正在憋一个大招，不是简单的AI邮件工具，而是一个超实用的效率工具集，再等两三个月就能跟大家见面了。老罗还吐槽说，市面上很多AI工具都不咋地，国内研发团队也比较稀缺，至于细节嘛，他可是守口如瓶，吊足了大家的胃口。
+最近罗永浩就透露，他们公司正在研发一个AI效率工具集，预计两三个月就能和大家见面。这不是个简单的AI邮件工具，而是很实用的效率工具集。老罗还提到，他们试用过不少美国AI邮件工具，效果不太理想。
 
-话说最近“归藏AI工具箱”玩出了新花样，用Veo3工具搞出了一系列动物运动员AI视频，什么袋鼠打篮球、猫咪击剑，简直萌翻全网！他们还大方分享了提示词，让大家也能轻松玩转AI视频。有人就说了，Claude在代码生成方面简直是“丝滑”无比，因为它特别擅长“全局观”和“任务编排”，就像给大模型装了智能导航，省去了不少弯路，大大提升了生成质量。但也有个大爆料，之前挺火的作弊工具Cluely，被技术侦探逆向分析后发现，它背后真正的大佬居然是GPT 4.1和Claude Sonnet 3.7！看来，想隐藏自己依赖的技术栈，可没那么容易。
+说到创意，归藏的AI工具箱最近玩出了新花样，他们用工具创作了一系列受欢迎的“动物运动员”AI视频。想象一下袋鼠打篮球、猫咪击剑，是不是挺有意思的？他们还大方分享了制作模板。
 
-说到未来，有观点认为企业向“AI Native”转型简直是势在必行。因为AI能让员工效率飙升，小巧的AI创业公司用更少的人手就能创造更高营收，这无疑预示着未来几年，AI Native的组织会在市场竞争中展现更强的生命力。
+在代码生成方面，有人对Claude赞不绝口，说它表现得很“丝滑”，因为它有卓越的“全局观”和“任务编排”能力。但另一方面，之前受欢迎的作弊工具Cluely却被揭示出真实面貌，它背后其实依赖的是GPT 4.1和Claude Sonnet 3.7。
 
-还有些有趣的开源项目。比如“Jaaz”，它是个本地免费的AI工具，能让你自由设计、生成图像和故事板，还解决了隐私担忧。有个叫“Manim”的Python框架，能把复杂的数学概念变成生动直观的动画。喜欢B站的朋友注意了，“biliTickerBuy”是个购票辅助工具，帮你轻松抢票。而“suna”则是一个开源的通用AI代理，能帮你提高工作效率。最后，字节跳动也开源了他们的OCR模型“Dolphin”，它有3.22亿参数，文本识别又快又准，尤其对付那些不当换行的问题，效果非常出色。
+行业展望，有观点认为，公司向“AI Native”（AI原生）转型是势在必行的。因为AI能让员工效率提升，而传统企业在组织适应上会遇到挑战。相比之下，那些小巧的AI创业公司，用更少的人力却能创造更高的营收。
 
-最后，玉伯提出了一个挺有意思的观点：在AI时代，我们平时做的剪藏，不再只是“稍后观看”，更像是在悄悄告诉AI“我喜欢这个”，这就像在无形中“训练”着AI，让它更懂你。
+开源方面，字节跳动开源了他们的OCR模型“Dolphin”。这款模型拥有3.22亿参数，采用并行策略，能实现高效且高质量的文本识别，尤其在处理不当换行问题上表现出色。
+
+最后，玉伯在社交媒体上分享了一个引人深思的观点：在AI时代，我们平时“剪藏”信息的行为，其意义可能正在转变。它不再仅仅是“稍后观看”，更像是在无形中告诉AI我们喜欢什么。这真是个独特视角，让人回味。
 
 今天的情报就到这里，注意隐蔽，赶紧撤离。
 
 本期关键词:
-#AI工具 #罗永浩 #AI视频 #Claude #AI Native #企业转型 #开源项目 #DolphinOCR #剪藏 #AI时代
+#AI
+#效率工具
+#动物视频
+#代码生成
+#AInative
+#OCR模型
+#剪藏
